--- a/templates/index.html
+++ b/templates/index.html
@@ -479,6 +479,8 @@
                                 <div class="category-title"><i class="fas fa-users me-1"></i> Kunder</div>
                                 <div class="example-query" onclick="fillQuery('Vis alle kunder sorteret efter værdi')">Top kunder efter værdi</div>
                                 <div class="example-query" onclick="fillQuery('Hvilke kunder har vi i finanssektoren?')">Finanssektorens kunder</div>
+                                <div class="example-query" onclick="fillQuery('Kunder fra Jylland')">Jyllandske kunder</div>
+                                <div class="example-query" onclick="fillQuery('Store kunder i København')">Københavnske kunder</div>
                                 <div class="example-query" onclick="fillQuery('Nye kunder i 2024')">Nye kunder 2024</div>
                             </div>
                             
@@ -500,6 +502,8 @@
                                 <div class="category-title"><i class="fas fa-chart-bar me-1"></i> Analytik</div>
                                 <div class="example-query" onclick="fillQuery('Monthly revenue trend')">Månedlig omsætning</div>
                                 <div class="example-query" onclick="fillQuery('Konsulent utilization rate')">Konsulent udnyttelse</div>
+                                <div class="example-query" onclick="fillQuery('Geografisk fordeling af kunder')">Kunde geografi</div>
+                                <div class="example-query" onclick="fillQuery('IT virksomheder i Midtjylland')">IT i Midtjylland</div>
                                 <div class="example-query" onclick="fillQuery('Customer satisfaction scores')">Kundetilfredshed</div>
                             </div>
                         </div>
